@@ -1,18 +1,19 @@
 <settings>
 
+  <!-- view -->
+  <category label="30001">
+    <setting id="viewsortorder" type="enum" label="30100" lvalues="30101|30102" default="0" />
+    <setting id="viewname" type="enum" label="30300" lvalues="30301|30302|30303|30304|30305|30306" default="4" />
+  </category>
+
   <!-- Playlist -->
   <category label="30002">
     <setting id="playmode" type="enum" label="30021" lvalues="30022|30023" default="0" />
     <setting id="shuffle" type="bool" label="30200" default="false" />
     
     <setting id="repeat" type="bool" label="30201" default="false" />
-    
-  </category>
-
-  <!-- view -->
-  <category label="30001">
-    <setting id="viewsortorder" type="enum" label="30100" lvalues="30101|30102" default="0" />
-    <setting id="viewname" type="enum" label="30300" lvalues="30301|30302|30303|30304|30305|30306" default="4" />
+   
+    <setting id="streamtimeout" type="enum" label="30210" lvalues="30211|30212|30213" default="0" /> 
   </category>
 
 
